# Asumi-Agent

./: .gitignore  CHANGELOG.md  README.ja_JP.md  README.md  README.zh_CN.md  index.html  package.json  pnpm-lock.yaml
docs/: migration-plan.md
public/character-configs/: default.json
src/: App.css  App.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: lib.rs  main.rs
src/components/: SnowflakeIcon.tsx
src/components/quick-launch/: QuickLaunch.tsx
src/components/settings/: AgentsSection.tsx  AssistantsSection.tsx  AsumiSkillSection.tsx  CustomSelect.tsx  ModelsSection.tsx
src/pages/: Home.tsx
src/pages/settings/: Settings.tsx
src/stores/: settings.ts
