[package]
name = "asumi-agent"
version = "0.1.0"
description = "Asumi Agent - A desktop companion powered by AI, inspired by 錦 あすみ"
authors = ["jayi0908"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "asumi_agent_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["macos-private-api", "tray-icon"] }
tauri-plugin-opener = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
image = { version = "0.25", default-features = false, features = ["png"] }
tauri-plugin-global-shortcut = "2"
reqwest = { version = "0.12", features = ["json", "rustls-tls"], default-features = false }
arboard = "3"

[target.'cfg(target_os = "macos")'.dependencies]
core-graphics = "0.24"
